--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       left: 0;
       right: 0;
       text-align: center;
+      transform: translateX(50px);
       font-size: 48px;
       font-weight: 900;
       color: #fff;
@@ -105,6 +106,7 @@
       left: 0;
       right: 0;
       text-align: center;
+      transform: translateX(50px);
       font-size: 18px;
       color: #aaf;
       text-shadow: 0 0 10px rgba(100, 100, 255, 0.5);
